Remove BOM from opened text file