@@ -1,3 +1,3 @@
 @echo off
-C:\Java\zulu21.40.17-ca-fx-jdk21.0.6-win_x64\bin\java.exe -jar "-Dfile.encoding=UTF-8" build/libs/fmmsegfx-1.0-SNAPSHOT.jar
+C:\Java\zulu21.40.17-ca-fx-jdk21.0.6-win_x64\bin\java.exe -jar "-Dfile.encoding=UTF-8" --module-path "C:\Java\javafxlib" --add-modules org.fxmisc.richtext build/libs/fmmsegfx-1.0-SNAPSHOT.jar
 REM C:\Java\zulu24.28.85-ca-fx-jdk24.0.0-win_x64\bin\java.exe -jar "-Dfile.encoding=UTF-8" build/libs/fmmsegfx-1.0-SNAPSHOT.jar
